syntax = "proto3";
package storage;

import "google/protobuf/timestamp.proto";

option go_package = "pkg/grpc/storage";

service StorageService{
  rpc NewUploadFile(stream NewUploadFileRequest) returns (NewUploadFileResponse);
  rpc UpdateFile(stream UploadFileRequest) returns (UploadFileResponse);
  rpc DownloadFile(DownloadFileRequest) returns (stream DownloadFileResponse);
  rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
  rpc GetList(ListRequest) returns (ListResponse);
}


message FileMeta{
  string id = 1;
  string filename = 2;
  string path = 3;
  uint64 size = 4;
//  google.protobuf.Timestamp  created_at = 5;
//  google.protobuf.Timestamp updated_at = 6;
//  google.protobuf.Timestamp uploaded_by = 7;
}

message NewUploadFileRequest{
  FileMeta meta = 1;
  bytes data = 2;
}

message NewUploadFileResponse{
  bool success = 1;
}

message UploadFileRequest{
  FileMeta meta = 1;
  bytes data = 2;
}

message UploadFileResponse{
  bool success = 1;
}

message DownloadFileRequest{
  string id = 1;
}

message DownloadFileResponse{
  FileMeta meta = 1;
  bytes data = 2;
}

message DeleteFileRequest{
  string id = 1;
}

message DeleteFileResponse{
  bool success = 1;
}

message ListRequest{
  string path = 1;
}

message ListResponse{
  repeated FileMeta meta = 1;
}
